<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".ShopActivity">

    <TextView
        android:id="@+id/shopTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:fontFamily="@font/pixel_font"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/shop_title" />

    <ImageButton style="@style/BackButton"
        android:id="@+id/menuButton"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:contentDescription="@string/menu_button_text"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopTitle"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true">

    <SurfaceView
        android:id="@+id/shipView"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:id="@+id/shipSpecs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shipView"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:layout_alignStart="@id/shipView"
        app:fontFamily="@font/pixel_font"
        android:textSize="9sp"
        android:textColor="@android:color/white"
        android:text="@string/ship_specs"
        android:layout_alignLeft="@id/shipView"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/shipView"
        android:layout_toRightOf="@id/shipView"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/wingCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:layout_gravity="center"
                android:spinnerMode="dialog"/>
            <Spinner
                android:id="@+id/mainModuleCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:layout_gravity="center"
                android:spinnerMode="dialog"/>

            <Spinner
                android:id="@+id/mainEngineCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:layout_gravity="center"
                android:spinnerMode="dialog"/>

            <Spinner
                android:id="@+id/controlEngineCustom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/black"
                android:layout_gravity="center"
                android:spinnerMode="dialog"/>

        </LinearLayout>

    </ScrollView>

    </RelativeLayout>

</RelativeLayout>